@@ -2,6 +2,7 @@ X/10/2013 ola-0.8.33
  * Fix the build breakage when using XCode 5 (clang 500)
  * Save the SPI pixel count during shutdown
  * Fix E1.31 merging - #256
+ * Fix a bug where OLA wouldn't receive on ArtNet universe 0 - #260
 
 29/9/2013 ola-0.8.32
  * Added more RDM responder tests to cover E1.37-1
